tests/data-clumps/test-cases/parameter-parameter/negative-insufficient-shared/java/source/BillingProcessor.java
public class BillingProcessor {
    public void createInvoice(String patientId, String doctorId, double amount) {
        System.out.println("Creating invoice of " + amount + " for " + patientId);
    }
}
